@@ -5,7 +5,6 @@ Maintainer: Wichert Akkerman <wakkerma@debian.org>
 Standards-Version: 3.1.0
 Build-Depends: debiandoc-sgml, ncurses-dev
 
-
 Package: dpkg
 Architecture: any
 Essential: yes
