@@ -1,0 +1,37 @@
+.\" This is an -*- nroff -*- source file.
+.\" dpkg-safefilelist and this manpage are Copyright 1999 by Adam Heath.
+.\"
+.\" This is free software; see the GNU General Public Licence version 2
+.\" or later for copying conditions.  There is NO warranty.
+.\" Time-stamp: <Fri, 24 Dec 1999 05:36:51 -0600>
+.TH dpkg-safefilelist 1 "December 1999" "Debian Project" "Debian GNU/Linux"
+.SH NAME
+dpkg\-safefilelist \- List files with symlinks after their targets
+.SH SYNOPSIS
+.B dpkg\-safefilelist
+.SH DESCRIPTION
+.PP
+This manual page documents the
+.B dpkg\-safefilelist
+.sh script which provides an easy way to list files with the targets
+coming before the symlinks that point to them.
+
+.SH EXAMPLES
+.TP
+.B dpkg-safefilelist
+This will find all files in the current directory, and sort them,
+printing symlinks after their targets.
+.SH BUGS?
+Successfully tested on
+.B Debian Linux 
+systems only.
+.SH SEE ALSO
+.BR dpkg-deb (8),
+.BR find (1),
+.SH COPYRIGHT
+Copyright 1999 Adam Heath.
+.B dpkg-safefilelist
+is free software; see the GNU General Public Licence version 2 or
+later for copying conditions. There is
+.B no
+warranty.
