@@ -1,3 +1,8 @@
+Sat Dec 25 02:50:31 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Oops, forgot to add scripts/dpkg-safefilelist.{1,pl}
+  * debian/control: remove double empty line
+
 Fri Dec 24 17:34:30 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * version-nr: update to 1.6.5
